--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@next/third-parties": "^15.1.3",
     "next": "^15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "swiper": "^11.2.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
