--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/third-parties": "^15.1.3",
+    "motion": "^12.4.9",
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
